[build-system]
requires = ["setuptools", "wheel"] 

[[project.authors]]
name = "Tensor Tom"
email = "14287229+TensorTom@users.noreply.github.com"

[project.license]
text = "MIT"

[project]
name = "colabctl"
version = "0.2.1"
description = "Google Colaboratory background/task executioner & controller."
readme = "README.md"

dependencies = [
    # Web Drivers
    "selenium >=3.141",
    "validators >=0.17.1",
    # QA
    "flake8",
    "pytest",
]
requires-python = ">=3.8"

keywords = []
classifiers = []

[project.urls]
Homepage = "https://github.com/bitnom/colabctl"
